  - is_highly_powerful_number?/1 - Is a number a _highly powerful_ number?
  - is_perfect_power?/1 - Is integer `n` a perfect power?
  - is_perfect_square?/1 - Is integer `n` a perfect square?
  - is_perfect_cube?/1 - Is integer `n` a perfect cube?
  - is_root_of?/2 - Is integer `n` any k-th root of `m`?
  - is_achilles_number?/1 - Is integer `n` an achilles number?
  
 - Chunky.Sequence
  - drop/2 - Like Enum.drop
  
### New Sequences
 
 - A001065 - Aliquot parts of N
 - A005101 - Abundant Numbers
 - A000396 - Perfect Numbers
 - A005100 - Deficient Numbers
 - A003601 - Arithmetic Numbers
 - A002093 - Highly Abundant Numbers
 - Added Sequences.OEIS.Factors module
 - A001694 - Powerful Numbers
 - A005361 - Product of Prime Exponents of factors of N
 - A005934 - Highly powerful numbers: numbers with record value
 - A001597 - Perfect Powers
 - A052486 - Achilles Numbers

## v0.8.0

### Changes/Refactorizations

### Enhancements

 - Chunky.Sequence
  - sequences are now marked as finite or infinite (as computable/stored in Squence library)
  - sequences can now have initial index/offset other than 0 (like A000593)
  - New Functions:
   - `is_finite?/1` - Is a sequence finite or infinite is sequence library?
 - Chunky.Math
  - `factors/1` - All divisors of N
  - `sigma/1` - Sigma-1 function of factors of N
  - `sigma/2` - Generalized Sigma function
  - `pow/2` - Pure integer exponentiation
  
### New Sequences

 - A000593 - Sum of Odd Divisors of N
 - A000009 - Number of partitions of n into distinct parts
 - A000079 - Powers of 2
 - A000203 - Sigma-1 of N
 - A001057 through A001060 - sigma2 through sigma5 of N
 - A013954 through A013968 - sigma6 through sigma20 of N
 
 
## v0.7.0

### Enhancements

 - `Chunky.Math` - Extended math for integers and floating point
  - `pow/3` - Modular arithmetic exponentiation
  - `is_prime?/1` - Primality test for integers
  - `prime_factors/1` - Factorize an integer to prime factors
  